# Hub-OS

./: .drone.yaml  .gitignore  .gitmodules  .readthedocs.yml  BattleNetwork.sh  CMakeLists.txt  Cargo.toml  Makefile  README.md  about.toml  battlenetwork.mk  battlenetwork.project  battlenetwork.txt  battlenetwork.workspace  build - Shortcut.lnk  crowdin.yml  doxygenfile  log.txt  todo.txt
android/: Cargo.toml  README.md  debug.keystore
android/app/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/res/values/: colors.xml
android/src/: lib.rs  network_locks.rs
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/android_res/mipmap-anydpi-v26/: ic_launcher.xml
client/android_res/values/: styles.xml
client/resources/fonts/: fonts.animation  fonts_compressed.animation
client/src/: android.rs  args.rs  crash_reports.rs  ease.rs  http.rs  lib.rs  main.rs  memoize.rs  parse_util.rs  stopwatch.rs  supporting_service.rs  tips.rs  zip.rs
client/src/battle/: ability_modifier.rs  action.rs  attack_box.rs  attack_charge.rs  augment.rs  battle_animator.rs  battle_audio_tracking.rs  battle_callback.rs  battle_config.rs  battle_props.rs  battle_script_context.rs  battle_simulation.rs  card_action.rs  card_select_button.rs  card_select_restriction.rs  component.rs  default_delete.rs  defense_rule.rs  delete_animations.rs  derived_animation_state.rs  emotion_ui.rs  entity_memories.rs  external_events.rs  field.rs  input_display.rs  intangibility.rs  mod.rs  ownership_tracking.rs  player_fallback_resources.rs  player_form.rs  player_input.rs  player_overridables.rs  rollback_vm.rs  shared_battle_assets.rs  shared_battle_resources.rs  staged_items.rs  status_director.rs  status_registry.rs  tile.rs  tile_state.rs  (+3 more)
client/src/bindable/: action_lockout.rs  animator_playback_mode.rs  attack_context.rs  audio_behavior.rs  aux_prop.rs  block_color.rs  card_class.rs  card_properties.rs  character_rank.rs  comparison.rs  component_lifetime.rs  defense_priority.rs  direction.rs  drag.rs  element.rs  emotion.rs  entity_id.rs  entity_owner.rs  generational_index.rs  hit_context.rs  hit_flags.rs  hit_properties.rs  input.rs  input_query.rs  intangible_rule.rs  lua_color.rs  lua_vector.rs  math_expression.rs  mod.rs  move_action.rs  movement.rs  sprite_color_mode.rs  sprite_shader_effect.rs  team.rs  tile_highlight.rs  tile_state.rs  time_freeze_chain_limit.rs
client/src/lua_api/: battle_vm_manager.rs  errors.rs  global_api.rs  helpers.rs  mod.rs  vms.rs
client/src/overlays/: debug_overlay.rs  mobile_overlay.rs  mod.rs  virtual_controller.rs
client/src/overworld/: background_properties.rs  camera_controller.rs  custom_properties.rs  identity.rs  map.rs  mod.rs  overworld_area.rs  overworld_base_event.rs  overworld_event.rs  overworld_player_data.rs  overworld_scene_base.rs  overworld_sprite_layer.rs  projection.rs  shadow_map.rs  tile_layer.rs  tiled.rs
client/src/render/: background.rs  camera.rs  capture_pass.rs  mod.rs  sprite_node.rs  tree.rs
client/src/requests/: http.rs  mod.rs  request_package_hashes.rs  request_package_meta.rs  request_package_metas.rs  request_package_preview.rs  request_package_zip.rs  request_user.rs
client/src/resources/: asset_manager.rs  audio_manager.rs  boot_thread.rs  card_recipes.rs  constants.rs  deck_restrictions.rs  emulated_input.rs  global_music.rs  global_sfx.rs  globals.rs  input.rs  input_util.rs  local_asset_manager.rs  mod.rs  network.rs  resource_paths.rs  restrictions.rs  sound_buffer.rs  translations.rs
client/src/saves/: battle_recording.rs  block_grid.rs  block_shape.rs  card.rs  config.rs  deck.rs  folder.rs  global_save.rs  installed_block.rs  mod.rs  player_input_buffer.rs  server_info.rs
client/src/scenes/: battle_init_scene.rs  battle_scene.rs  battle_select_scene.rs  blocks_scene.rs  boot_scene.rs  character_scene.rs  character_select_scene.rs  config_scene.rs  credits_scene.rs  customize_scene.rs  deck_editor_scene.rs  deck_list_scene.rs  folder_edit_scene.rs  folder_list_scene.rs  font_test_scene.rs  initial_connect_scene.rs  key_item_scene.rs  library_scene.rs  main_menu_scene.rs  manage_switch_drive_scene.rs  mod.rs  netplay_init_scene.rs  overlay.rs  overworld_online_scene.rs  overworld_scene_base.rs  package_scene.rs  package_updates_scene.rs  packages_scene.rs  resource_order_scene.rs  server_edit_scene.rs  server_list_scene.rs  switch_drives_scene.rs  sync_data_scene.rs
client/src/structures/: mod.rs  sequential_enum.rs  slotmap.rs  tree.rs  vec_map.rs  vec_set.rs
client/src/transitions/: color_fade_transition.rs  fade_transition.rs  hold_color_scene.rs  mod.rs  pixelate_out_transition.rs  push_transition.rs  swipe_in_transition.rs
framework/: .gitignore  Cargo.toml  LICENSE  README.md
framework/examples/multiplatform/: Cargo.toml  compile-and-host.sh  index.html
framework/examples/sprites/: main.rs
framework/examples/triangle/: main.rs  triangle.rs  triangle.wgsl
framework/src/: cfg.rs  lib.rs  prelude.rs
framework/src/async_task/: mod.rs  native.rs  sync_result_async_error.rs  task.rs  web.rs
framework/src/common/: game.rs  game_io.rs  game_runtime.rs  (+9 more)
network_channels/: Cargo.toml
network_channels/examples/: udp.rs
network_channels/src/: channel_receiver.rs  channel_send_tracking.rs  channel_sender.rs  config.rs  connection.rs  connection_builder.rs  label.rs  lib.rs  packet.rs  packet_receiver.rs  packet_sender.rs  reliability.rs  serialize.rs
network_channels/tests/: congestion_control.rs  random_order.rs  reliable.rs
packets/: Cargo.toml
packets/src/: address_parsing.rs  client_packets.rs  lib.rs  lua_helpers.rs  multicast_packets.rs  netplay_packets.rs  packet_channels.rs  pvp_packets.rs  server_comm_packets.rs  server_packets.rs  sync_data_packets.rs  zip.rs
server/: Cargo.toml  README.md
server/areas/: default.tmx
server/assets/: bg.animation
server/scripts/: example_bot.lua  example_encounters.lua  example_pvp_script.lua  mod_downloader_entry.lua  script_nodes_entry.lua
server/src/: args.rs  logger.rs  main.rs
(+2096 files in other folders)
