[workspace]
members = ["android", "client", "packets", "scripts", "server", "structures"]
resolver = "2"

[workspace.package]
version = "0.81.1"

[profile.dev]
opt-level = 1

[profile.dev-fast]
inherits = "dev"
opt-level = 0

[profile.release]
lto = true

[workspace.dependencies]
rollback_mlua = { git = "https://github.com/Hub-OS/rollback-mlua" }
smol = "2"
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await"
] }
