[package]
name = "hub_os"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packets = { path = "../packets", features = ["rollback_mlua"] }
framework = { git = "https://github.com/Hub-OS/framework" }
anyhow = "1.0"
bytemuck = "1.12"
chrono = "0.4"
flume = "0.10"
generational-arena = "0.2"
hecs = "0.10"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
rollback_mlua = { git = "https://github.com/Hub-OS/rollback-mlua" }
num-derive = "0.4"
num-traits = "0.2"
rand = { version = "0.8", features = ["getrandom"] }
rand_xoshiro = "0.6"
rmp-serde = "1.1"
rodio = "0.17"
roxmltree = "0.18"
rust-ini = "0.19"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
taffy = "0.3"
unicode-segmentation = "1.10"
clap = { version = "4.3", features = ["derive"] }
unicode_categories = "0.1"
flate2 = "1.0"
bimap = "0.6"
zip = { version = "0.6", features = ["deflate"], default-features = false }
path-clean = "1.0"
futures = "0.3"
walkdir = "2.3"
toml = "0.7"
serde_json = "1.0"
enum-map = "2.4"
smallvec = "1.10"
field_count = "0.1"
rustysynth = "1.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
surf = { version = "2.3", default-features = false, features = ["curl-client"] }

[target.'cfg(target_os = "android")'.dependencies]
surf = { version = "2.3", default-features = false, features = [
  "h1-client-rustls",
] }

# necessary for android + wasm builds
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
assets = "cache/android_assets"
resources = "android_res"

[package.metadata.android.sdk]
target_sdk_version = 30
min_sdk_version = 30
max_sdk_version = 30

[package.metadata.android.signing.release]
path = "debug.keystore"
keystore_password = "android"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application.activity]
launch_mode = "singleInstance"
orientation = "sensorLandscape"

[package.metadata.android.application]
label = "Hub OS"
theme = "@style/Theme"
