[package]
name = "hub_os"
version.workspace = true
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packets = { path = "../packets", features = ["rollback_mlua"] }
structures = { path = "../structures" }
framework = { git = "https://github.com/Hub-OS/framework" }
anyhow = "1.0"
bytemuck = "1.12"
chrono = "0.4"
flume = "0.11"
slotmap = "1"
hecs = "0.10"
itertools = "0.14"
log = "0.4"
rollback_mlua = { git = "https://github.com/Hub-OS/rollback-mlua" }
num-derive = "0.4"
num-traits = "0.2"
rand = { version = "0.9", features = ["os_rng"] }
rand_xoshiro = "0.7"
rmp-serde = "1.1"
rodio = { version = "0.21", default-features = false, features = [
  "playback",
  "cpal-shared-stdcxx"
] }
symphonia = { version = "0.5", features = [
  "ogg",
  "vorbis",
  "wav",
  "mp3"
], default-features = false }
roxmltree = "0.19"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
taffy = "0.3"
unicode-segmentation = "1.10"
clap = { version = "4.3", features = ["derive"] }
unicode_categories = "0.1"
flate2 = "1.0"
bimap = "0.6"
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await"
] }
walkdir = "2"
toml = "0.9"
serde_json = "1.0"
enum-map = "2"
smallvec = "1.10"
field_count = "0.1"
rustysynth = "1.1"
indexmap = "2"
nom = { git = "https://github.com/rust-bakery/nom.git", rev = "2560d5ca917db83db832ce66070b8c81f76b1db2" }
uncased = "0.9"
dirs-next = "2.0.0"
webbrowser = { version = "1" }
smol = "2"
base64 = "0.22.1"
fluent-templates = "0.13.0"
sys-locale = "0.3.2"
fluent-langneg = "0.14.1"
fluent-resmgr = "0.0.8"
dasp_sample = "0.11.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
minreq = { version = "2", features = ["https-native"] }
opener = "0.8.2"

[target.'cfg(target_os = "android")'.dependencies]
minreq = { version = "2", features = ["https"] }

[target.'cfg(target_os = "windows")'.dependencies]
framework = { git = "https://github.com/Hub-OS/framework", features = ["sdl2"] }

[features]
record_simulation_flow = []
