[package]
name = "framework"
version = "0.1.0"
edition = "2021"
license = "Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = { version = "0.4", features = ["std"] }
# using webgl feature until wgpu is standardized and implemented in browsers
wgpu = { version = "0.14", features = ["webgl"] }
bytemuck = { version = "1.11", features = ["derive"] }
glam = { version = "0.21", features = ["bytemuck"] }
image = "0.24"
raw-window-handle = "0.5"
raw-window-handle-0-4 = { package = "raw-window-handle", version = "0.4" }
anyhow = "1.0"
instant = "0.1"
async-executor = "1.4"
async-task = "4.3"
pollster = "0.2"
strum = { version = "0.24", features = ["derive"] }
termcolor = "1.1"
clipboard = "0.5"

[features]
default = ["winit"]
sdl = ["dep:sdl2"]
winit = ["dep:winit", "dep:gilrs"]

# native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "2.2", default-features = false, features = [
  "colors"
] }
winit = { version = "0.27", optional = true }
gilrs = { version = "0.9", optional = true }
async-io = { version = "1.7" }

# desktop
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
sdl2 = { version = "0.35", features = [
  "raw-window-handle",
  "bundled"
], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
sdl2 = { version = "0.35", features = [
  "raw-window-handle",
  "bundled",
  "static-link"
], optional = true }
ndk-sys = "0.4"

# web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.27"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gilrs = "0.9"

# dependencies for examples
[dev-dependencies]
pollster = "0.2"
rand = "0.8"
simple-easing = "1.0"
