[package]
name = "network_channels"
version = "0.1.0"
edition = "2024"
license = "Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
instant = "0.1"

[dev-dependencies]
rand = "0.9"

[features]
reliable_statistics = []
