[package]
name = "packets"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
network_channels = { path = "../network_channels" }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
num-derive = "0.3"
num-traits = "0.2"
rollback_mlua = { git = "https://github.com/Real-PET/rollback-mlua", optional = true }
log = "0.4"
async-std = "1.12"
strum = { version = "0.24", features = ["derive"] }
md5 = "0.7"
hex = "0.4.3"
enum-map = "2.4"

[features]
rollback_mlua = ["dep:rollback_mlua"]
