[package]
name = "packets"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
network_channels = { path = "../network_channels" }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
num-derive = "0.4"
num-traits = "0.2"
rollback_mlua = { git = "https://github.com/Hub-OS/rollback-mlua", optional = true }
mlua = { version = "*", optional = true }
log = "0.4"
async-std = "1.12"
strum = { version = "0.26", features = ["derive"] }
hmac-sha256 = "1"
hex = "0.4.3"
enum-map = "2.4"
slotmap = "1"
itertools = "0.12"
walkdir = "2"
path-clean = "1"
zip = { version = "0.6", features = ["deflate"], default-features = false }
indexmap = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
rollback_mlua = ["dep:rollback_mlua"]
mlua = ["dep:mlua"]
