[package]
name = "real_pet_server"
version = "0.1.0"
authors = ["Arthur <arthurcose@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
default-run = "real_pet_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packets = { path = "../packets" }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
isahc = "1.7"
byteorder = "1.4"
uuid = { version = "1.1", features = ["v4"] }
mlua = { version = "0.8", features = ["vendored", "lua54"] }
clap = "3.2"
roxmltree = "0.18"
itertools = "0.10"
multi_mut = "0.1"
base64 = "0.21"
rand = "0.8"
zip = "0.6"
flate2 = "1.0"
log = "0.4"
termcolor = "1.1"
generational-arena = "0.2"
flume = "0.10"
toml = "0.7"
