[package]
name = "hub_os_server"
version = "0.1.0"
authors = ["Arthur <arthurcose@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
default-run = "hub_os_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packets = { path = "../packets" }
async-std = { version = "1.12", features = ["attributes"] }
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await"
] }
isahc = "1.7"
uuid = { version = "1.1", features = ["v4"] }
mlua = { version = "0.9", features = ["vendored", "lua54"] }
clap = { version = "4.3", features = ["derive"] }
roxmltree = "0.19"
itertools = "0.12"
base64 = "0.21"
rand = "0.8"
zip = "0.6"
flate2 = "1.0"
log = "0.4"
termcolor = "1.1"
slotmap = "1"
flume = "0.11"
toml = "0.8"
