[package]
name = "hub_os_server"
version.workspace = true
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
packets = { path = "../packets", features = ["mlua"] }
structures = { path = "../structures" }
smol = { workspace = true }
futures = { workspace = true }
isahc = "1.7"
mlua = { version = "0.9", features = ["vendored", "lua54"] }
clap = { workspace = true }
roxmltree = "0.19"
itertools = "0.12"
rand = "0.8"
getrandom = "0.2"
zip = { version = "0.6", features = ["deflate"], default-features = false }
flate2 = "1.0"
log = "0.4"
termcolor = "1.1"
slotmap = "1"
flume = "0.11"
toml = "0.8"
htmlentity = "1.3.2"
indexmap = "2"
