[package]
name = "multiplatform"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../.." }
anyhow = "1.0.58"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

# necessary for android + wasm builds
[lib]
crate-type = ["cdylib", "rlib"]
